adds snap gallery

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,7 @@ import ScrollMargin from '../slyds/advanced/ScrollMargin.astro'
 import ScrollIntoView from '../slyds/advanced/ScrollIntoView.astro'
 import SnapAfterLayout from '../slyds/advanced/SnapAfterLayout.astro'
 import DevTools from '../slyds/advanced/DevTools.astro'
+import SnapGallery from '../slyds/advanced/SnapGallery.astro'
 import RecapScrollport from '../slyds/advanced/RecapScrollport.astro'
 import RecapScrollItem from '../slyds/advanced/RecapScrollItem.astro'
 
@@ -115,6 +116,7 @@ import SnapTo from '../slyds/explainers/SnapTo.astro'
       <ScrollMargin />
       <ScrollIntoView />
       <SnapAfterLayout />
+      <SnapGallery />
       <RecapScrollport />
       <RecapScrollItem />
     </slyd-group>
