better explainer / draft break down

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,9 @@ import SwipeUI from '../slyds/tricks/SwipeUI.astro'
 import Tabs from '../slyds/tricks/Tabs.astro'
 import TapToSnap from '../slyds/tricks/TapToSnap.astro'
 
-import SnapExplainers from '../slyds/explainers/Title.astro'
+import SnapNext from '../slyds/explainers/Title.astro'
+import SnapExplainers from '../slyds/explainers/SnapExplainers.astro'
+import SnapDraft from '../slyds/explainers/SnapDraft.astro'
 import SnapTarget from '../slyds/explainers/SnapTarget.astro'
 import ScrollStart from '../slyds/explainers/ScrollStart.astro'
 import SnapChanging from '../slyds/explainers/SnapChanging.astro'
@@ -148,7 +150,9 @@ import SnapTo from '../slyds/explainers/SnapTo.astro'
     </slyd-group>
 
     <slyd-group>
+    	<SnapNext />
     	<SnapExplainers />
+    	<SnapDraft />
     	<SnapTarget />
     	<ScrollStart />
     	<SnapChanging />
