--- a/src/slyds/explainers/ScrollStart.astro
+++ b/src/slyds/explainers/ScrollStart.astro
@@ -21,4 +21,5 @@ import Prism from '/src/utils/Prism.astro'
       <div></div><div></div><div></div><div></div>
     </slyd-scrollport>
   </demo-stage>
+  <span badge>Scroll Snap 2</span>
 </slyd>
