--- a/src/slyds/explainers/SnapChanged.astro
+++ b/src/slyds/explainers/SnapChanged.astro
@@ -12,4 +12,5 @@ import Prism from '/src/utils/Prism.astro'
     `}/>
     <video src="/snapChanged-twitter.mov" autoplay muted loop loading="lazy" style="height: 50vh"></video>
   </demo-stage>
+  <span badge>Scroll Snap 2</span>
 </slyd>
