--- a/src/slyds/explainers/SnapTarget.astro
+++ b/src/slyds/explainers/SnapTarget.astro
@@ -3,7 +3,7 @@ import Prism from '/src/utils/Prism.astro'
 ---
 
 <slyd id="snap-target">
-  <h2>Snap Target</h2>
+  <h2>:snapped</h2>
   <demo-stage>
     <Prism lang='css' code={`
       :snapped {
@@ -21,4 +21,5 @@ import Prism from '/src/utils/Prism.astro'
       ))}
     </slyd-scrollport>
   </demo-stage>
+  <span badge>Scroll Snap 2</span>
 </slyd>
