--- a/src/slyds/tricks/PullToRefresh.astro
+++ b/src/slyds/tricks/PullToRefresh.astro
@@ -4,7 +4,7 @@ import Prism from '/src/utils/Prism.astro'
 
 <slyd id="pull-to-refresh">
   <h2>Pull To Refresh</h2>
-  <demo-stage>
+  <demo-stage style="max-block-size: 50vh">
     <Prism lang='css' code={`
       // tiny snap point at top of refresh el
       // delayed snap point on tiny el
