--- a/src/slyds/tricks/Stories.astro
+++ b/src/slyds/tricks/Stories.astro
@@ -20,19 +20,19 @@ import Prism from '/src/utils/Prism.astro'
     </div>
     <div class="stories"> 
       <section class="user">
-        <article class="story" style="--bg: url(https://picsum.photos/480/840);"></article> 
-        <article class="story" style="--bg: url(https://picsum.photos/480/841);"></article>
+        <article class="story" style="--bg: url(https://picsum.photos/id/100/480/840);"></article> 
+        <article class="story" style="--bg: url(https://picsum.photos/id/101/480/840);"></article>
       </section>
       <section class="user">
-        <article class="story" style="--bg: url(https://picsum.photos/481/840);"></article>
+        <article class="story" style="--bg: url(https://picsum.photos/id/102/480/840);"></article>
       </section>
       <section class="user">
-        <article class="story" style="--bg: url(https://picsum.photos/481/841);"></article>
+        <article class="story" style="--bg: url(https://picsum.photos/id/103/480/840);"></article>
       </section>
       <section class="user">
-        <article class="story" style="--bg: url(https://picsum.photos/482/840);"></article>
-        <article class="story" style="--bg: url(https://picsum.photos/482/843);"></article>
-        <article class="story" style="--bg: url(https://picsum.photos/482/844);"></article>
+        <article class="story" style="--bg: url(https://picsum.photos/id/104/480/840);"></article>
+        <article class="story" style="--bg: url(https://picsum.photos/id/99/480/840);"></article>
+        <article class="story" style="--bg: url(https://picsum.photos/id/106/480/840);"></article>
       </section>
     </div>
   </demo-stage>
