--- a/src/slyds/review/Glossary.astro
+++ b/src/slyds/review/Glossary.astro
@@ -6,35 +6,35 @@ import Prism from '/src/utils/Prism.astro'
   <h2>Glossary</h2>
   <code-gallery style="align-items: start; gap: 10vmin; padding-block-end: 10vmin;">
     <div text-left>
-      <h3>Root Scroller</h3>
-      <p lead>Top most scroller. Typically the HTML tag. <span highlight>Scroller promotion</span> possible.</p>
+      <h3 color="text-1">Root Scroller</h3>
+      <p lead>Top most scroller. Typically the HTML tag. Scroller promotion possible.</p>
     </div>
     <div text-left>
-      <h3>Implicit Scroller</h3>
+      <h3 color="text-1">Implicit Scroller</h3>
       <p lead>A nested scroller or any scroller that's not the root scroller lol</p>
     </div>
     <div text-left>
-      <h3>ScrollPort</h3>
+      <h3 color="text-1">ScrollPort</h3>
       <p lead>The viewport frame of a scroller</p>
     </div>
     <div text-left>
-      <h3>Scroll Axis</h3>
+      <h3 color="text-1">Scroll Axis</h3>
       <p lead>A 2D coordinate system to translate along</p>
     </div>
     <div text-left>
-      <h3>Scroll Behavior</h3>
+      <h3 color="text-1">Scroll Behavior</h3>
       <p lead>From CSS or JS, control if browser scroll should be instant or animated</p>
     </div>
     <div text-left>
-      <h3>Overscroll Behavior</h3>
+      <h3 color="text-1">Overscroll Behavior</h3>
       <p lead>Should a nested scroller trap it's inertia or not</p>
     </div>
     <div text-left>
-      <h3>Overscroll Effect</h3>
+      <h3 color="text-1">Overscroll Effect</h3>
       <p lead>UI feedback informing users they're at the beginning or end of a scroller</p>
     </div>
     <div text-left>
-      <h3>Scroll Hint</h3>
+      <h3 color="text-1">Scroll Hint</h3>
       <p lead>UI to help users see there's room to scroll</p>
     </div>
   </code-gallery>
