--- a/src/slyds/review/Glossary.astro
+++ b/src/slyds/review/Glossary.astro
@@ -4,7 +4,7 @@ import Prism from '/src/utils/Prism.astro'
 
 <slyd id="glossary">
   <h2>Glossary</h2>
-  <code-gallery style="align-items: start; gap: 10vmin; padding-block-end: 10vmin;">
+  <code-gallery class="observe-in-view" style="align-items: start; gap: 10vmin; padding-block-end: 10vmin;">
     <div text-left>
       <h3 color="text-1">Root Scroller</h3>
       <p lead>Top most scroller. Typically the HTML tag. Scroller promotion possible.</p>
