large screen nits

--- a/src/slyds/advanced/IntersectionObserver.astro
+++ b/src/slyds/advanced/IntersectionObserver.astro
@@ -3,7 +3,7 @@ import Prism from '/src/utils/Prism.astro'
 ---
 
 <slyd id="intersection-observer">
-  <h2>Intersection Observer</h2>
+  <h2 class="lg-codeblock-adjust">Intersection Observer</h2>
   <Prism lang='js' code={`
     let ioCallback = nodes => {
       // filter based on intersection/bounds/etc
