--- a/src/slyds/explainers/SnapChanged.astro
+++ b/src/slyds/explainers/SnapChanged.astro
@@ -3,7 +3,7 @@ import Prism from '/src/utils/Prism.astro'
 ---
 
 <slyd id="snap-changed">
-  <h2>snapChanged()</h2>
+  <h2 class="lg-codeblock-adjust">snapChanged()</h2>
   <demo-stage style="max-block-size: 50vh">
     <Prism lang='js' code={`
       el.onsnapchanged = event => {
