--- a/src/slyds/explainers/SnapChanging.astro
+++ b/src/slyds/explainers/SnapChanging.astro
@@ -3,7 +3,7 @@ import Prism from '/src/utils/Prism.astro'
 ---
 
 <slyd id="snap-changing">
-  <h2>snapChanging()</h2>
+  <h2 class="lg-codeblock-adjust">snapChanging()</h2>
   <demo-stage style="max-block-size: 50vh">
     <Prism lang='js' code={`
       el.onsnapchanging = event => {
