--- a/src/slyds/explainers/SnapTarget.astro
+++ b/src/slyds/explainers/SnapTarget.astro
@@ -15,7 +15,7 @@ import Prism from '/src/utils/Prism.astro'
       }
     `}/>
     <slyd-scrollport class="horizontal snap-x">
-      <div class="snapped" style="display:grid;place-content:center">:snapped</div> 
+      <div class="snapped" style="display:grid;place-content:center; font-weight: bold">:snapped</div> 
       {[...Array(10)].map(() => ( 
         <div></div> 
       ))}
