--- a/src/slyds/tricks/ScrollStart.astro
+++ b/src/slyds/tricks/ScrollStart.astro
@@ -4,7 +4,7 @@ import Prism from '/src/utils/Prism.astro'
 
 <slyd id="scroll-start-trick">
   <h2>Scroll Start</h2>
-  <demo-stage>
+  <demo-stage style="min-block-size: 45vh">
     <Prism lang='css' code={`
       @keyframes scroll-start-target {
         from { 
