--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,8 +78,8 @@ import SnapTo from '../slyds/explainers/SnapTo.astro'
 	<meta name="theme-color" content="#000000">
 
 	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
-	<link rel="stylesheet" href="/src/styles/index.css">
-        <link rel="stylesheet" href="https://gitcdn.xyz/repo/octoshrimpy/blokkfont/master/blokkfont.css">
+	<!--<link rel="stylesheet" href="/src/styles/index.css">-->
+	<link rel="stylesheet" href="https://gitcdn.xyz/repo/octoshrimpy/blokkfont/master/blokkfont.css" media="print" onload="this.media='all'">
 
 	<title>CSS Day 2022</title>
 </head>
@@ -88,7 +88,7 @@ import SnapTo from '../slyds/explainers/SnapTo.astro'
 		<slyd-group>
     	<slyd id="intro">
         <h1 uppercase>oh snap!</h1>
-        <h3>Nice <span highlight>Scroll</span> Control</h3>
+        <h3>That <span highlight>Scroll</span> Control</h3>
       </slyd>
     </slyd-group>
 
