--- a/src/slyds/basics/Syntax.astro
+++ b/src/slyds/basics/Syntax.astro
@@ -5,11 +5,11 @@ import Prism from '/src/utils/Prism.astro'
 <slyd id="the-syntax">
   <h2 class="lg-codeblock-adjust">Syntax</h2>
   <Prism lang='css' code={`
-    /* for overflow container */
+    /* for the scrollport */
     scroll-snap-type: x proximity;
     scroll-snap-type: y mandatory;
 
-    /* for container items */
+    /* for scroll items */
     scroll-snap-align: start;
     scroll-snap-align: center;
     scroll-snap-align: end;
