last nits before giving the talk

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,7 +165,12 @@ import SnapTo from '../slyds/explainers/SnapTo.astro'
     <slyd-group>
       <slyd id="holy-snap">
         <h2>Holy Snap</h2>
-        <h1>Scroll 🤯</h1>
+        <h1>🤯 scroll 🤯</h1>
+      </slyd>
+
+	  <slyd id="get-the-slides">
+        <h2>Review The Slides</h2>
+        <a href="https://oh-snap.netlify.app/">oh-snap.netlify.app</a>
       </slyd>
 
       <slyd id="thank-you">
