--- a/src/slyds/tricks/PullToRefresh.astro
+++ b/src/slyds/tricks/PullToRefresh.astro
@@ -13,6 +13,7 @@ import Prism from '/src/utils/Prism.astro'
       // wait for fetch()
       // scrollIntoView() main
       // ScrollTimeline for flare
+      // snap-stop always on main for UX
     `}/>
     <div class="pull-to-refresh">
       <div id="refresh">
