--- a/src/slyds/tricks/ScrollLinked.astro
+++ b/src/slyds/tricks/ScrollLinked.astro
@@ -13,14 +13,15 @@ import Prism from '/src/utils/Prism.astro'
           fill: 'both',
         })
       `}/>
+      <p text-left>⚠️ syntax changing</p>
     </div>
     <div class="device"> 
       <main class="tabs">
         <nav> 
           <div>
-            <a active href="#responsive">Responsive</a>
-            <a href="#accessible">Accessible</a>
-            <a href="#overscroll">Handles Long Sections</a>
+            <a active href="#responsive">Sup</a>
+            <a href="#accessible">CSS Day</a>
+            <a href="#overscroll">@ScrollTimeline</a>
             <a href="#more">
               <svg fill="currentColor" viewBox="0 0 20 20" role="presentation" focusable="false">
                 <path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path>
@@ -62,12 +63,7 @@ import Prism from '/src/utils/Prism.astro'
           </article>
           <article id="more">
             <h2>Lore s sdf</h2>
-            <ul>
-              <li>Lorem</li>
-              <li>ipsum</li>
-              <li>dolor</li>
-            </ul>
-            <p>Sit molestiae itaque rem optio molestias voluptati obcaecati!</p>
+            <p>Lorem ipsum dolor sit amet consectet adipisicing elit</p>
           </article>
         </section>
       </main> 
