--- a/src/slyds/tricks/InfiniteScroll.astro
+++ b/src/slyds/tricks/InfiniteScroll.astro
@@ -4,13 +4,12 @@ import Prism from '/src/utils/Prism.astro'
 
 <slyd id="infinite-scroll">
   <h2>Infinite Scroll</h2>
-  <demo-stage style="max-block-size: 55vh;">
+  <demo-stage style="max-block-size: 55vh; gap: var(--size-5);">
     <Prism lang='js' code={`
       IntersectionObserver(nodes => {
         const [active] = nodes.filter(node => 
           node.isIntersecting)
-        if (!active) return
-        let parent = active.target.parentElement
+        ...
         if (active.target === parent.lastElementChild)
           parent.firstElementChild.scrollIntoView()
       }, {
