--- a/src/styles/tricks/pull-to-refresh.css
+++ b/src/styles/tricks/pull-to-refresh.css
@@ -10,6 +10,7 @@
 
 .pull-to-refresh-main {
   scroll-snap-align: start;
+  scroll-snap-stop: always;
   display: grid;
   gap: var(--size-5);
   padding: var(--size-5);
@@ -17,6 +18,7 @@
   & > p {
     text-align: start;
     font-size: 1.25rem;
+    font-family: "BLOKK";
   }
 }
 
