use codepen collection instead of snap-gallery

--- a/src/slyds/advanced/SnapGallery.astro
+++ b/src/slyds/advanced/SnapGallery.astro
@@ -1,4 +1,5 @@
 <slyd id="snap-gallery">
   <h2>Snap Gallery</h2>
-  <h3><a href="https://snap-gallery.netlify.app">https://snap-gallery.netlify.app</a></h3>
+  <h3><a href="https://codepen.io/collection/KpqBGW">https://codepen.io/collection/KpqBGW</a></h3>
+  <p>A Codepen Collection</p>
 </slyd>
