--- a/src/slyds/tricks/ScrollLinked.astro
+++ b/src/slyds/tricks/ScrollLinked.astro
@@ -19,8 +19,8 @@ import Prism from '/src/utils/Prism.astro'
       <main class="tabs">
         <nav> 
           <div>
-            <a active href="#responsive">Sup</a>
-            <a href="#accessible">CSS Day</a>
+            <a active href="#responsive">Hi</a>
+            <a href="#accessible">An Event Apart</a>
             <a href="#overscroll">@ScrollTimeline</a>
             <a href="#more">
               <svg fill="currentColor" viewBox="0 0 20 20" role="presentation" focusable="false">
